--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,48 @@
 ---
 title: "Página inicial"
 layout: "layouts/home.njk"
+triptych:
+- image_path: https://placehold.co/140x140/png
+  title     : "Planalto central"
+  excerpt   : "Casas do Planalto central do Brasil, do ciclo do ouro à ferrovia"
+  url       : /planalto/
+- image_path: https://placehold.co/140x140/png
+  title     : "40 palmos"
+  excerpt   : "Difusão do módulo de 40 palmos de testada em Portugal nos séculos XIX e XX"
+  url       : /40palmos/
+- image_path: https://placehold.co/140x140/png
+  title     : "Sintaxe espacial"
+  excerpt   : "Casas brasileiras analisadas segundo a profundidade visual"
+  url       : /sintaxe/
 ---
 
+<section id="colecoes-especiais">
+  <h2 class="text-center">Coleções especiais</h2>
+
+  <div class="container triptych">
+    <div class="row">
+      {% for t in triptych %}
+      <div class="col-lg-4">
+        {% if t.image_path %}
+          <img class="rounded-circle" src="{{ t.image_path }}" width="140" height="140" alt="{{ t.title }}" />
+        {% endif %}
+        {% if t.title %}
+          <h3 class="fw-normal">{{ t.title }}</h3>
+        {% endif %}
+        {% if t.excerpt %}
+          <p>{{ t.excerpt }}</p>
+        {% endif %}
+        {% if t.url %}
+          <p><a class="btn{% if t.btn_class %} {{ t.btn_class }}{% endif %}" href="{{ t.url }}">{% if t.btn_label %}{{ t.btn_label }}{% else %}{{ ui.read_more }}{% endif %}</a></p>
+        {% endif %}
+      </div>
+      {% endfor %}
+    </div><!--/.row-->
+  </div><!--/.triptych-->
+</section>
+
+<section id="inclusoes-recentes">
+  <h2 class="text-center">Inclusões recentes</h2>
+
+  {% include "partials/album.njk" %}
+</section>
