Logo e álbum funcional

--- a/src/index.html
+++ b/src/index.html
@@ -44,5 +44,6 @@ triptych:
 <section id="inclusoes-recentes">
   <h2 class="text-center">Inclusões recentes</h2>
 
+  {% assign album = collections.casa %}
   {% include "partials/album.njk" %}
 </section>
