Aprimora estilos e organização

--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,23 @@
 ---
 title: "Página inicial"
 layout: "layouts/home.njk"
+isHome: true
 triptych:
 - image_path: https://placehold.co/140x140/png
   title     : "Planalto central"
   excerpt   : "Casas do Planalto central do Brasil, do ciclo do ouro à ferrovia"
   url       : /planalto/
+  btn_class : "btn-primary"
 - image_path: https://placehold.co/140x140/png
   title     : "40 palmos"
   excerpt   : "Difusão do módulo de 40 palmos de testada em Portugal nos séculos XIX e XX"
   url       : /40palmos/
+  btn_class : "btn-primary"
 - image_path: https://placehold.co/140x140/png
   title     : "Sintaxe espacial"
   excerpt   : "Casas brasileiras analisadas segundo a profundidade visual"
   url       : /sintaxe/
+  btn_class : "btn-primary"
 ---
 
 <section id="colecoes-especiais">
