--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@ triptych:
           <p>{{ t.excerpt }}</p>
         {% endif %}
         {% if t.url %}
-          <p><a class="btn{% if t.btn_class %} {{ t.btn_class }}{% endif %}" href="{{ t.url }}">{% if t.btn_label %}{{ t.btn_label }}{% else %}{{ ui.read_more }}{% endif %}</a></p>
+          <p><a class="btn{% if t.btn_class %} {{ t.btn_class }}{% endif %}" href="{{ t.url }}">{% if t.btn_label %}{{ t.btn_label }}{% else %}{{ ui.read_more }}…{% endif %}</a></p>
         {% endif %}
       </div>
       {% endfor %}
