--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,11 @@
 ---
-title: "Página inicial"
-layout: "layouts/home.njk"
-isHome: true
+title: "Casas tradicionais luso-brasileiras"
+description: >
+  Documentário da arquitetura doméstica publicada na bibliografia de referência
+layout: "layouts/base.njk"
 header:
   overlay_image: "https://i.pinimg.com/originals/f7/76/49/f7764902ee90d4fc48b6f795307bc366.jpg"
-  filter: 0.5
+  overlay_filter: 0.7
   caption: "Abigail de Andrade, Estrada do Mundo Novo, 1888"
 triptych:
 - image_path: https://placehold.co/210x210/png
@@ -22,20 +23,33 @@ triptych:
   excerpt   : "Casas brasileiras analisadas segundo a profundidade visual"
   url       : /sintaxe/
   btn_class : "btn-primary"
+pagination:
+  data: collections.casa
+  reverse: true
+  size: 6
+  alias: posts
+templateEngineOverride: njk
 ---
+
+{%- if not lang -%}
+  {%- set lang = site.locale -%}
+{%- endif %}
 
 <section id="colecoes-especiais">
   <h2 class="text-center pb-3">Coleções especiais</h2>
-  {% include "partials/triptych.njk" %}
+{%- include "partials/triptych.njk" -%}
 </section>
 
 <section id="inclusoes-recentes">
   <h2 class="text-center my-3">Inclusões recentes</h2>
-
-  <div class="container-fluid">
-    <div class="row g-3 m-3">
-    {% assign album = collections.casa | reverse %}
+  <div class="row row-cols-md-2 row-cols-xl-3 g-3 mx-5">
+  {% for post in pagination.items %}
     {% include "partials/album.njk" %}
-    </div><!--/.row-->
-  </div><!--/.container-fluid-->
+  {% endfor %}
+  </div>
+  <div class="d-grid gap-2 col-6 col-lg-3 mx-auto mt-4">
+    <a type="button" href="/casa/" class="btn btn-outline-primary btn-lg">
+      {{ ui_text[lang].load_all }}
+    </a>
+  </div>
 </section>
