--- a/src/pages/mapa.html
+++ b/src/pages/mapa.html
@@ -4,13 +4,18 @@ layout: "layouts/map.njk"
 templateEngineOverride: njk
 eleventyExcludeFromCollections: true
 override:header: 
+header:
+  actions:
+    - href: '/casa/'
+      label: "Ver lista"
+      btn_class: "btn-primary btn-lg px-5 py-3"
 lang: "pt"
 css: [ "/assets/leaflet/leaflet.css" ]
 permalink: /mapa/
 ---
 
 <script src="/assets/leaflet/leaflet.js"></script>
-<div id="map" class="my-5 py-5" itemprop="hasMap"></div>
+<div id="map" class="d-flex flex-column w-100 h-100 align-self-stretch align-items-stretch" itemprop="hasMap"></div>
 
 {% set mapPins = collections.casa %}
 
