--- a/src/pages/mapa.html
+++ b/src/pages/mapa.html
@@ -2,6 +2,8 @@
 title: "Mapa das casas"
 layout: "layouts/map.njk"
 templateEngineOverride: njk
+classes:
+  - "map"
 override:header: 
 header:
   actions:
