Melhor apresentação da Cronologia geral

--- a/src/pages/mapa.html
+++ b/src/pages/mapa.html
@@ -9,7 +9,10 @@ header:
   actions:
     - href: '/casa/'
       label: "Ver lista"
-      btn_class: "btn-primary btn-lg px-5 py-3"
+      btn_class: "btn-primary btn-lg px-5 py-3 mx-2"
+    - href: '/cronologia/'
+      label: "Linha do tempo"
+      btn_class: "btn-primary btn-lg px-5 py-3 mx-2"
 lang: "pt"
 permalink: /mapa/
 ---
